@@ -27,8 +27,8 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
     implementation 'com.oracle.database.jdbc:ojdbc8:21.9.0.0'
-    implementation 'org.springframework:spring-beans:5.3.18'
-    implementation 'org.springframework:spring-jdbc:5.3.18'
+    implementation 'org.springframework:spring-beans:5.3.19'
+    implementation 'org.springframework:spring-jdbc:5.3.19'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
